--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
