--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.14",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "6.6.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto": "^1.0.1",
     "handlebars": "^4.7.8",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.3",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
